# kenpom-client

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  HOOKS.md  INTERPRETING_PREDICTIONS.md  README.md  RUN_TESTS.md  TEST_AND_MONITOR_CHECKLIST.md  analyze_todays_games.py  calculate_real_edge.py  debug_refs_page.py  explore_overtime.py  fetch_odds_scheduled.bat  find_betting_edge.py  market_odds_2025-12-21.csv  odds_workflow.yaml  pr_description.md  pr_description_remaining.md  pyproject.toml  pyrightconfig.json  setup_scheduler.ps1  setup_task_xml.ps1  show_highlights.py
.claude/: settings.local.json
.claude/agents/: agents.md
.claude/commands/: branch-cleanup  branch-cleanup.md  git-blame.md  git-diff.md  git-log.md  pr-checks.md  pr-create  pr-create.md  pr-list.md  pr-merge  pr-merge.md  pr-review  pr-review.md  repo-status  (+3 more)
docs/: DAILY_SLATE_API.md  ODDS_WORKFLOW.md  PROJECTION_MODEL_SPEC.md  WORKFLOW_MONITORING.md  _index.md  conferences.md  data_contracts.md  fanmatch.md  four_factors.md  height.md  mcp__kenpom__kenpom_slate tool output (58ruuh).txt  misc_stats.md  point_distribution.md  ratings.md  ratings_archive.md  teams.md
schemas/: conferences.schema.json  daily_slate_row.json  daily_slate_table.json  fanmatch.schema.json  four_factors.schema.json  height.schema.json  join_plan.json  misc_stats.schema.json  point_distribution.schema.json  ratings.schema.json  ratings_archive.schema.json  teams.schema.json
scripts/: debug_overtime.py  edge_analysis.py
tests/: test_effort.py  test_matchup_features.py  test_prediction.py  test_snapshot_enrichment.py
(+25 files in other folders)
